z-index fix

--- a/less/style.less
+++ b/less/style.less
@@ -95,7 +95,7 @@
    right: 25px;
    background-image: url("../assets/img/to_top.png");
    cursor: pointer;
-   z-index: 99999;
+   z-index: 10;
 }
 
 .container {
